# enterprise-rag-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
datasets/parser_golden/: README.md  cases.jsonl
datasets/retrieval_fixture/: README.md  cases.jsonl
docs/adr/: ADR-001-core-contracts.md  ADR-003-vector-store-selection.md
docs/reports/: D10-structured-pdf-parser-selection.md  D11-table-parsing-and-fallback.md  D12-ocr-provider-abstraction.md  D13-parser-golden-dataset.md  D15-recursive-splitter.md  D16-token-counter-and-context-budget.md  D17-parent-child-chunk.md  W1-engineering-baseline-report.md  W2-parser-comparison-and-bad-cases.md  why-rag-engineering-boundaries-matter.md
scripts/: chunk_eval.py  eval_parser_golden.py  index_parameter_benchmark.py  pipeline_benchmark.py  retrieval_eval.py
src/enterprise_rag_engine/: __init__.py  exceptions.py  interfaces.py  logging.py  models.py  settings.py
src/enterprise_rag_engine/api/: __init__.py  app.py  exception_handlers.py
src/enterprise_rag_engine/document_pipeline/: __init__.py  async_pipeline.py  cache.py  tables.py  tokenization.py
src/enterprise_rag_engine/evals/: __init__.py  chunk_quality.py  index_parameter_benchmark.py  parser_golden.py  pipeline_benchmark.py  retrieval.py
src/enterprise_rag_engine/generation/: __init__.py  context.py  prompts.py
src/enterprise_rag_engine/retrieval/: __init__.py  bm25.py  dense.py  embeddings.py  hybrid.py  rrf.py  (+3 more)
tests/: test_api_errors.py  test_api_health.py  test_async_pipeline.py  test_bge_m3_embedder.py  test_bm25_retriever.py  test_cache_manager.py  test_chunk_quality.py  test_context_builder.py  test_cross_encoder_reranker.py  test_dense_retriever.py  test_documents_api.py  test_docx_parser.py  test_embedding_contract.py  test_hybrid_retriever.py  test_index_parameter_benchmark.py  test_interfaces.py  test_markdown_parser.py  test_models.py  test_ocr_parser.py  test_package.py  test_parent_child_splitter.py  test_parser_golden.py  test_pdf_parser.py  test_pipeline_benchmark.py  test_prompt_registry.py  test_qdrant_vector_store.py  test_recursive_splitter.py  test_retrieval_metrics.py  test_rrf_fusion.py  test_semantic_splitter.py  test_settings.py  test_structured_pdf_parser.py  test_tables.py  test_tokenization.py  test_two_stage_retriever.py  test_vector_store_contract.py
(+19 files in other folders)
