[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-engine"
version = "0.1.0"
description = "Enterprise-grade RAG backend with document pipelines, retrieval, citations, and evaluations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "zyk75" }]
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2.5",
    "pydantic>=2.8",
    "pypdf>=6.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.27",
    "uvicorn>=0.30",
]
structured = [
    "docling>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --cov=enterprise_rag_engine --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
branch = true
source = ["enterprise_rag_engine"]

[tool.coverage.report]
show_missing = true
skip_covered = true
